# qt-music-store

./: CMakeLists.txt  README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui  music-store.sql
backend/: CMakeLists.txt  cart.cpp  cart.h  database_handler.cpp  database_handler.h  database_manager.cpp  database_manager.h  domain.h  edit_dialog.cpp  edit_dialog.h  floating_widgets.cpp  floating_widgets.h  instruments.cpp  instruments.h  product_card.cpp  product_card.h  table.cpp  table.h  user.h
resources/: desktop.ini  resources.qrc
